seedpod/src/components/EpisodeMedia/EpisodeMedia.css
.EpisodeMedia {
    background-color: #262425;
    padding: 12px;
    margin-bottom: 24px;
    color: #ebe9eb;
    cursor: default;
}

.EpisodeMedia a {
    color: lightgreen;
}

.EpisodeMedia img {
    width: 300px;
    height: 300px;
}

.EpisodeMedia video {
    width: 300px;
    height: 300px;
    background-color: black;
}

.EpisodeMedia audio {
    width: calc(100vw - 420px);
    height: 50px;
}

.EpisodeMedia {
    display: flex;
    flex-direction: row;
}

.EpisodeMedia-details {
    display: flex;
    flex-direction: column;
    margin-left: 12px;
    margin-right: 12px;
}

.EpisodeMedia-detailsDescription {
    min-height: 250px;
    max-height: 250px;
    overflow-y: hidden;
}

